--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11740813.md#1" target="_blank">青松絮语：三把钥匙</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11740813.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1612122314362483-150x120.jpg" align ="left"></a>老家有亲戚过来，住在公公婆婆家。晚上，我们打算开车带他们出去转转。
+
+到公公婆婆家后，说了会话，我们就出门了。临锁门前，亲戚提醒公公婆婆：千万别忘记带钥匙。婆婆说，每人一把钥匙，不会有问题的。他们还给了亲戚一把钥匙，所以总共三把钥匙。
+
+我们在外面吃饭、聊天、散步，玩尽兴了才送他们回公婆家去。他们下车后，我们没.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726598.md#1" target="_blank">法官蒙冤下狱 却见证奇迹</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726598.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/04/110413151531100445_1-150x120.jpg" align ="left"></a>这个故事的其中一位主人翁叫做董雄，他自年少起，就诚信神佛。贞观十四年春天，当时董雄担任大理寺的官员，因受到季仙僮事件的牵连，被上了枷锁，囚禁在御史台。当时，一同受牵连被扣押的十多人。其中大理丞李忻玄、司直王忻与董雄关在同一牢房，而且每个人都被铁索牢牢地锁着。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 6:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/7/12/24/n1952735.md#1" target="_blank">艺术的时空之旅（十）传统油画技法探究（三）</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/7/12/24/n1952735.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/201910233-150x120.jpg" align ="left"></a>即使一幅不大的多层罩染技法油画也需要数倍于直接技法的时间来完成，这就是为何古代大师们往往花费数月甚至数年的时间才能完成一幅画的原因之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/9/2/n11493215.md#1" target="_blank">【医案】我性本明</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/9/2/n11493215.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1609281625492483-150x120.jpg" align ="left"></a>针灸治疗1个月后，女主管精神好很多，工作忙也不那么疲倦。但每次来诊都赶最后一班针灸，到诊时都是满脸倦容，我问女主管：“你刚下班啊？忙到那么晚！”她说她下班以后，去参加各种活动，每天把时间塞满，把精力耗光，等晚上10点回到家，累垮就睡了。冷不防，我一针见血就说：“你在逃避孤独、寂寞？你不想面对你自己！”女主管顿时傻眼！低.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank">神鸽守金库 官员杀鸽毁巢遭报应</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7cad2b1ea5bfc59b6837390e9c433938-150x120.jpg" align ="left"></a>鸽子有灵吗？，有一件发生在清代甘肃布政司（藩司）的事情作了实证，万物有灵不得不信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:56 AM			</td></tr>
@@ -25,7 +31,7 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/8/n11708626.md#1" target="_blank">【命理】有无子女 八字中怎样看？</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/8/n11708626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f72c63cef6247cb4eac123f052e8173d-150x120.png" align ="left"></a>八字看子女，简单来说，最常见的就是看子星和子女宫（简称指子宫，下同），子宫是指时柱地支。其次是看子女星。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/13/n11720506.md#1" target="_blank">天地清明引(143) 东流水－宫椽倾圮2</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/13/n11720506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/Peach_Festival_of_the_Queen_Mother_of_the_West_Freer_Gallery_of_Art-150x120.jpg" align ="left"></a>刑部大牢，金海困于此地已有三日之久。眼见残酷刑罚，耳听严刑拷打，口尝馊饭脏水，鼻闻血腥恶臭，每日每夜惊吓不已，胡思乱想，险些又疯癫过去。是日，牢门再开，被两个衙役拖了出去，一桶冰水从头浇到脚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/11/n11716394.md#1" target="_blank">【三国英雄】之六：曹操的张良和青州兵</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/11/n11716394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ad563d3fb25ead5c3c447234f33cecaa-150x120.jpg" align ="left"></a>青州兵从黄巾军起家，被曹操收编，跟随曹操征战四方，在曹操去世后解散，就像上天给予曹操的兵器，随着曹操走上历史舞台，又随着曹操走下历史舞台，让人唏嘘不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:51 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/19/n11666426.md#1" target="_blank">【馨香雅句】天地有大美而不言——时令之美</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/19/n11666426.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/bb24246b23689719ee2e4543c53f6005-150x120.jpg" align ="left"></a>生活中当人们心生烦恼，往往会寄情于山水，无论是“掬水月在手，弄花香满衣”还是“空山新雨后，天气晚来秋，明月松间照，清泉石上流”，又或是“疏影横斜水清浅，暗香浮动月黄昏”，人们在自然之中让心灵得以释放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:12 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11738830.md#1" target="_blank">五律：诗（四）</a><br></h3> 明月长挥景，幽篁好抚琴。 庄生梦蝴蝶，望帝寄春心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11739866.md#1" target="_blank">唐浩：全球反共</a><br></h3>红朝败落假大空   暴恶残民亿万蒙   四海围击正气聚   百年赤祸散尘空......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11738924.md#1" target="_blank">青春期的我们需要家长的理解和关心</a><br></h3>青春期的我们，受到激素的影响，心中会有很多的想法............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11738834.md#1" target="_blank">新诗：拥抱归来的春天</a><br></h3> 投身法道， 用时光搅碎苦难。 收起眼泪， 汇成一湖天水， 摆渡追回的岁月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:12 AM			</td></tr>
@@ -34,7 +40,5 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11738825.md#1" target="_blank">诗歌：除旧迎新</a><br></h3> 瑞雪纷飞鼠岁临， 红楼晃荡瞬间倾。 魔销神现人归正， 万物更新永世兴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/21/n11737381.md#1" target="_blank">诗歌：谁是我，我是谁？</a><br></h3> 死死生生复轮回，千诘百问我是谁？ 谁是我？我是谁？历史车轮滚滚推。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/21/n11736362.md#1" target="_blank">诗歌：英雄歌</a><br></h3>纵横疆场为家国 忠肝义胆壮山河 侠骨英风青史颂 浩气千古荡长歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 10:10 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/20/n11735539.md#1" target="_blank">五律：诗（二）</a><br></h3> 抖擞重霄下，落尘天上尊。 大音发星斗，高响动乾坤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/20/n11734081.md#1" target="_blank">诗歌：深冬</a><br></h3>  大雪漫漫入深冬 松柏青青笑寒风......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mchnr2468/djy/blob/master/gb/news2007_3.md#1<br><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mchnr2468/djy/blob/master/gb/news2007_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_3.htm">http://www.epochtimes.com/gb/news2007_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
