--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -11,7 +11,6 @@
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753516.md#1">陈思敏：中共新版证券法落地 A股病根无解</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751284.md#1">岳高：读书被关押的奇闻</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752482.md#1">洪微：美国建太空军 中共沮丧</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752368.md#1">海风：移民美国 隐瞒共产党员身份有麻烦</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752237.md#1">袁斌：成都“飞车党事件”与痛风酒发明人猝死</a><br>
@@ -22,6 +21,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11750697.md#1">袁斌：“细颈瓶”成敏感词 折射中共末日心态</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750032.md#1">程晓农：经济全球化的中共陷阱</a><br>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749651.md#1">【2019盘点】中共社会监控的极端化</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
@@ -34,6 +34,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753656.md#1">网络间谍组织监控亚洲NGO 后台疑是中共</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753606.md#1">白宫：若朝鲜试射远程导弹 美将采取行动</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753458.md#1">中共补贴超千亿 获金额逾十亿企业多涉华为</a><br>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751858.md#1">《假孔子之名》德国哥廷根研讨会 辩论激烈</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752481.md#1">平安夜不平安 港急救员：“生于乱世有责任”</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753444.md#1">从台湾大选到香港选举 2020亚洲大事盘点</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753384.md#1">经济压力大 港府再加码支持中小企业</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753365.md#1">镇政府食堂现熊掌、猫头鹰 领导工作餐？</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752311.md#1">【翻墙必看】内蒙古公安警官开枪打死两官</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752956.md#1">【直播中】12.29“香港人抗争的日与夜”集会</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752769.md#1">北京各行业利润下滑 房价由高位下跌近两成</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752375.md#1">大陆干旱持续数月 江西近33万人饮水困难</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 348,893,718 人
+- 共 348,893,719 人
 ```
 </strong>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
