--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,20 +30,20 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753463.md#1">台大选辩论 聚焦一国两制、香港、反渗透法</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753653.md#1">美国故事：国之强必先海军强</a><br>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753695.md#1">中共代理人加速政治分化香港 限制港人自由</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753440.md#1">台大选辩论 网站列蔡韩宋发言即时事实查核</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753656.md#1">网络间谍组织监控亚洲NGO 后台疑是中共</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753606.md#1">白宫：若朝鲜试射远程导弹 美将采取行动</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753458.md#1">中共补贴超千亿 获金额逾十亿企业多涉华为</a><br>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753458.md#1">中共补贴超千亿  涉华为企业获金额最多</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751858.md#1">《假孔子之名》德国哥廷根研讨会 辩论激烈</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752481.md#1">平安夜不平安 港急救员：“生于乱世有责任”</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753444.md#1">从台湾大选到香港选举 2020亚洲大事盘点</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753291.md#1">历史即将翻开新页 痛忆香港抗争者的创伤</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753384.md#1">经济压力大 港府再加码支持中小企业</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753365.md#1">镇政府食堂现熊掌、猫头鹰 领导工作餐？</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753504.md#1">浙江卫视秀年度综艺 高以翔事件只字未提惹议</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753695.md#1">中共代理人加速政治分化香港 限制港人自由</a><br>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753365.md#1">镇政府食堂现熊掌、猫头鹰 领导工作餐？</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752311.md#1">【翻墙必看】内蒙古公安警官开枪打死两官</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 348,893,719 人
+- 共 348,893,868 人
 ```
 </strong>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
