--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -18,7 +18,7 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752296.md#1" target="_blank">老鹰闯入鸡舍想大快朵颐 不料反被鸡群围殴</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752296.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1169416002-150x120.jpg" align ="left"></a>美国伊利诺州一个农场的鸡舍日前遭一只老鹰闯入。那只老鹰原本想大快朵颐一番，没想到看似勇猛的它反被鸡群围殴，下场凄惨。所幸农场里的人出面解围，让惊吓不已的老鹰回归大自然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 1:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11747770.md#1" target="_blank">房子越来越贵 合力买房 或成趋势</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11747770.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/iStock_38096768_MEDIUM-1-150x120.jpg" align ="left"></a>大多伦多地区房价飙升，越来越多人买不起房。既然凭一己之力买不起房，许多人就想到通过与人合买房，实现房主梦。大多区一位居民早在20年前，就通过这个办法实现家园梦想。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 6:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751759.md#1" target="_blank">月经经血发黑 有血块？中医一碗茶饮可改善</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751759.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/rose-brown-sugar-tea0_1352302715-150x120.jpg" align ="left"></a>女性经血发黑、有血块，通常是气滞血瘀造成的。多是由于生气愤怒、情志忧郁，从而导致肝气郁结、经血不畅引起。经血有血块，常伴有两胁胀痛、烦躁易怒、腹胀、胃口不佳等。可以经常备一些玫瑰花茶，特别是那些经血颜色偏深、有血块的女性。瑰有行气解郁、和血散瘀的功效，加点有温热散瘀、暖宫的红糖调和一下，这样泡出来的玫瑰花茶......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:24 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11750219.md#1" target="_blank">草莓护肤控血糖  清洗1招不让营养流失</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11750219.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/strawberry_591404918-copy-150x120.jpg" align ="left"></a>草莓多汁又甜美，受到大人小孩的喜爱。草莓具有高抗氧化力，草莓功效包括保护皮肤、控血糖和胆固醇，掌握清洗和食用技巧，可以让你吃到更多营养。草莓含有丰富植物化学物质，如花青素、儿茶素、槲皮素、山奈酚、鞣花酸以及维生素C。但草莓的外皮可能残留较多农药。在不去蒂、不伤果实的前提，可用如下方法把草莓表面的残留农药洗干净。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 1:34 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11750219.md#1" target="_blank">草莓护肤控血糖  这样清洗不让营养流失</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11750219.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/strawberry_591404918-copy-150x120.jpg" align ="left"></a>草莓多汁又甜美，受到大人小孩的喜爱。草莓具有高抗氧化力，草莓功效包括保护皮肤、控血糖和胆固醇，掌握清洗和食用技巧，可以让你吃到更多营养。草莓含有丰富植物化学物质，如花青素、儿茶素、槲皮素、山奈酚、鞣花酸以及维生素C。但草莓的外皮可能残留较多农药。在不去蒂、不伤果实的前提，可用如下方法把草莓表面的残留农药洗干净。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 1:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750967.md#1" target="_blank">车评：ProPILOT是自动驾驶吗？ 2020 Nissan Altima Platinum AWD</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750967.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG01-150x120.jpg" align ="left"></a>Nissan Altima属中型四门房车，然而四门房车在现今汽车市场上，有什么可以比SUV或CUV吸引呢？2020年Nissan Altima给了一个很好的答案。
 
 
