--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,8 +30,9 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753466.md#1">台总统辩论火花四射   韩国瑜批媒体成焦点</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753546.md#1">重庆中学生在学校坠亡 家人被禁见尸体</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753756.md#1">盘点2019中资股闪崩惨剧 惊现98%跌幅</a><br>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753756.md#1">2019中资股闪崩惨剧频发 惊现98%跌幅</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753653.md#1">美国故事：国之强必先海军强</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753695.md#1">中共代理人加速政治分化香港 限制港人自由</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753440.md#1">台大选辩论 网站列蔡韩宋发言即时事实查核</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751858.md#1">《假孔子之名》德国哥廷根研讨会 辩论激烈</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752481.md#1">平安夜不平安 港急救员：“生于乱世有责任”</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753444.md#1">从台湾大选到香港选举 2020亚洲大事盘点</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11748971.md#1">北京女子劳教所前所长李继荣的罪行</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753758.md#1">美情报助俄破获恐怖袭击 普京致电感谢川普</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 348,895,424 人
+- 共 348,897,934 人
 ```
 </strong>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
