--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11737087.md#1" target="_blank">【货币市场】 美股创历史最高 美元强势</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11737087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/money-notes-150x120.jpg" align ="left"></a>在货币市场周五（美东时间12月20日）北美交易时段，美元展现强势，美元分别对日元、英镑和欧元升值。美元彭博现货指数收于 97.69点，高于一周前的收盘指数97.172点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11736392.md#1" target="_blank">“自干五”花千芳替母养老维权 遭网民嘲讽</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11736392.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/440dce5aeac66d14adcc65a38bf15914-600x400-1-150x120.jpg" align ="left"></a>对花千芳在网上维权吐槽，大陆独立时评人士张起表示，他不会同情花千芳，“对于花千芳这样的人，更多的是看他的笑话，很少有怜悯的心，因为他用网红的社会地位和社会身份仍然在帮他的母亲做努力。他在微博上第二个帖子里说的3点包含很多不堪的算计，他委婉提出要求几十万的赔偿，因为我网红的地位和名人效应，我跟小老百姓不一样，可以给辽宁省带来很多麻烦，不解决问题还可以持续闹，这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/20/n11736172.md#1" target="_blank">高校频爆丑闻 清华被曝出骗子北大出流氓</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/20/n11736172.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/zgzj-150x120.jpg" align ="left"></a>清华、北大是大陆最顶尖的学府，但仅在今年以来，这两所大学的丑闻频发。多名清华EMBA毕业生被曝涉嫌诈骗，而北大几名教师涉嫌性丑闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/20/n11735699.md#1" target="_blank">网爆汪峰朋友圈发文截图 宣布章子怡平安产子</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/20/n11735699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/GettyImages-1145305822-150x120.jpg" align ="left"></a>20日晚，陆媒搜狐网晒出汪峰在朋友圈发文的截图，上面写着：“宝宝已顺利出生，母子平安，辛苦老婆了！”宣布章子怡产子喜讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744043.md#1" target="_blank">每日三退声明精选（2019/12/24）</a><br></h3>出国旅游，国外的民主自由，中国的欺骗谎言，形成鲜明对比，声明退出少先队、共青团、共产党一切组织，不做它的牺牲品！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744025.md#1" target="_blank">每日三退声明精选（2019/12/23）</a><br></h3>我从国内大量反人性的现实中认识到，无神论罪大恶极，中共才是最大的邪教，我声明自愿退出曾经入过的少先队，与之彻底决裂，争取光明的未来！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 11:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/22/n11738955.md#1" target="_blank">前华为工程师失去加国枫叶卡 面临遣返</a><br></h3>前中国电信巨头华为工程师张国东（Guodong Zhang，音译）从大陆移民加拿大后，因长期居住海外丢掉永久居民身份，面临被遣返回中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/22/n11738135.md#1" target="_blank">久坐玩手机每天吃汉堡 扬州男童患重度脂肪肝</a><br></h3>近日，江苏扬州9岁男童优优（化名）因肺炎就医。医生注意到，优优的体重竟有120斤，一检查，发现他还患上了重度脂肪肝。原来，优优爱玩手机，经常久坐不动，还每天吃汉堡喝饮料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:20 PM							</td></tr>
