--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11753867.md#1">乾元：中共设立“密码法”的目的是什么</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753239.md#1">【名家专栏】共同核心标准仍在破坏美国教育</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753516.md#1">陈思敏：中共新版证券法落地 A股病根无解</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751284.md#1">岳高：读书被关押的奇闻</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750943.md#1">吴惠林：再谈2019年诺贝尔经济学奖</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750697.md#1">袁斌：“细颈瓶”成敏感词 折射中共末日心态</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11750032.md#1">程晓农：经济全球化的中共陷阱</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
