--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751566.md#1" target="_blank">中共两省军区政委突然被免全国人大代表资格</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751566.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1401220857431944-150x120.jpg" align ="left"></a>中共两名少将——江苏省军区政委孟中康、海南省军区政委叶青，突然被免去中共全国人大代表职务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 11:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747468.md#1" target="_blank">【2019盘点】中国经济十大困局</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/ChinaEconomy-150x120.jpg" align ="left"></a>回首2019，在日益升级的中美贸易战以及日渐蔓延的债务违约的炮火、爆雷声中，中国经济步履蹒跚，在中共债务经济的泥沼中愈陷愈深。从房市、股市到债市，从出口、消费到投资，各个经济领域都是困局难解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750767.md#1" target="_blank">擅闯美海军基地禁区拍照 中国男子被捕</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750767.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/F-5N_VFC-111_NAS_Key_West-150x120.jpg" align ="left"></a>周四（12月26日），一名中国公民在佛罗里达州基韦斯特的美国海军基地禁区内拍照，被美国当局逮捕。去年12月，一名中国学生在同一地点拍摄建筑物和天线阵列照片被捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750485.md#1" target="_blank">红色资金介入大选 台查获最大两岸地下汇兑</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750485.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-505204462-150x120.jpg" align ="left"></a>距离台湾2020年1月11日总统大选仅剩两周时间，地下选举赌盘热钱四处窜流，台湾当局为防范中共红色资金渗透而严密查缉，12月25日查获一博弈集团透过两岸地下汇兑记录高达139亿台币，约合4.6亿美元，创史上最高，检调单位怀疑与大选赌盘有关。台湾针对2020大选已进行四波查缉赌博行动，查获选举相关赌盘共计58起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:49 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752699.md#1" target="_blank">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br></h3>北京市朝阳区民航总医院女医生杨文24日遭病人家属孙文斌用刀割喉死亡。陆媒近日披露其被杀的细节：孙用刀刺中她颈部后，再多次“拉锯式”切割，将她的颈部肌肉及气管锯断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 6:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752654.md#1" target="_blank">长沙动物园发生大象踩人事故 一驯兽员身亡</a><br></h3>12月24日下午1点20分许，湖南长沙生态动物园大象驯养场内，一头大象突然发狂，将一名驯兽员卜某踩死。动物园目前已将该大象隔离，有动物专家怀疑大象是发情所致。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752431.md#1" target="_blank">杭州一合资化工厂仓库着火</a><br></h3>12月29日早上，杭州钱塘新区一化工厂仓库着火。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752467.md#1" target="_blank">充电时手机爆炸 浙江男子被烧致面目全非</a><br></h3>近日，浙江海宁市民王先生半躺在床上休息时，拿起正放在床头柜上充电的手机，就在他拿起手机的一刹那，手机突然发生爆炸，致使他身上多处被烧伤，脸部几乎面目全非。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:24 PM							</td></tr>
