--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/12/n11718914.md#1" target="_blank">《求救信》引发西澳人关注中国人权</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/12/n11718914.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912121138061154-150x120.jpg" align ="left"></a>反映中共劳教所黑暗的纪录片《求救信》在澳大利亚西澳州立图书馆附属电影院里放映。在影片最后，当主人公说完“我想告诉世界，仍有许多人在中国遭受着迫害，但最后，正义一定会战胜邪恶”，剧院响起热烈掌声。“这部纪录片以非常有力的方式突出了共产党统治下的中国人民遭受到的可怕的人权侵犯。”澳洲基督教游说团西澳分部主席阿贝茨看完电影后说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/12/n11718293.md#1" target="_blank">美籍华人上海维权 受贸易战波及 护照被没收</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/12/n11718293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13967371-150x120.jpg" align ="left"></a>原籍上海市长宁区的江琴，多年前和美籍丈夫结婚后定居美国，今年初回国为合法房屋被强拆进京维权，被以通缉犯之名押回上海刑拘，美国的护照同时被办案警察扣留至今，致使江琴无法返美与丈夫团聚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/12/n11718287.md#1" target="_blank">李文足获法德人权法治奖 甩掉国保成功领奖</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/12/n11718287.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9500-150x120.png" align ="left"></a>12月11日，“709”维权律师王全璋的妻子李文足冲破国保的跟踪、阻拦，来到法国驻华大使馆，领取了本年度“法德人权法治奖”。李文足表示，这是所有关注709事件所有人的荣誉，感谢外界4年来对他们的支持，让709家属能够坚持到底。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 8:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/11/n11716553.md#1" target="_blank">黑警锯门相逼 法轮功学员李艳杰被迫跳楼逃生遇难</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/11/n11716553.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-2-150x120.jpg" align ="left"></a>锯门声越来越大，楼道里嘈杂声越来越多，门眼看就要被锯开，妻子李艳杰第一个握着接起来的床单从六楼顺下，丈夫宫凤强也接着下来，大概在四楼处床单突然断裂……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/15/n11724338.md#1" target="_blank">河北遵化 12名法轮功学员面临非法庭审</a><br></h3>7月6日，遵化多个村镇的法轮功学员几乎同时在凌晨3点多遭到警察入室绑架、抄家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:51 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/15/n11724303.md#1" target="_blank">辽宁法轮功学员徐传德多年前被迫害离世</a><br></h3>曾遭受中共非法劳教3年、判刑4年的辽宁省营口市老边区法轮功学员徐传德，于2013年黄历5月17日被迫害离世，年仅46岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/13/n11721169.md#1" target="_blank">【珍言真语】专访刘慧卿：林郑是千古罪人</a><br></h3>香港动荡6个月了。前立法会议员、民主党主席刘慧卿认为，这都是林郑月娥造成的。希望中央政府诺守“中英联合声明”与《基本法》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278_5.md#1">下一页</a></h3></td></tr>
