--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -28,7 +28,7 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/5/n11702000.md#1" target="_blank">贫富两兄弟的见证 好心和坏心结异果</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/5/n11702000.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fb029238ecf49b2109c0d439a9c844f0-150x120.jpg" align ="left"></a>古代朝鲜半岛上的故事，心地截然不同的两兄弟，见证了好心和坏心的不同结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11724991.md#1" target="_blank">菲女童以绷带缠脚自制Nike运动鞋 赛跑夺冠</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11724991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1181674094-150x120.jpg" align ="left"></a>菲律宾一名11岁女童以绷带缠脚自制耐吉（Nike）牌运动鞋，并以这双山寨版鞋子赢得赛跑比赛的三项冠军，而她也因此在网上爆红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/7/12/24/n1952721.md#1" target="_blank">艺术的时空之旅（九）传统油画技法探究（二）</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/7/12/24/n1952721.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Jacques-Louis_David_016-150x120.jpg" align ="left"></a>在意大利画家卡拉瓦乔（公元1571—1610年）之后的很多画家都爱在几乎是黑色的深色底子上提白，导致画家们都不得不被人归为“暗色画派大师”。同时，很多材料、颜色上的原因也致使这些作品在历史上一天比一天更黑，油画变黑得很厉害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:50 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/17/n11728493.md#1" target="_blank">新诗：哭泣</a><br></h3> 水经浅滩的呜咽 是河流的哭泣 叶枯寒枝的呜咽 是树木的哭泣 内心深处的呜咽......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:33 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/13/n11719885.md#1" target="_blank">庐山山水（下）</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/13/n11719885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/180227015536100093-150x120.jpg" align ="left"></a>“清境”之名，据说是蒋经国有感于此地景致清幽、气候宜人，于是发出赞叹说：“清新空气任君取，境地幽雅是仙居。”而得清境之名。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11726292.md#1" target="_blank">五绝：灯雪</a><br></h3> 日暮京城冷，纷飞大雪扬。 翩翩灯溢彩，玉落舞芳香。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11726245.md#1" target="_blank">五律：愁</a><br></h3> 钟隐托江水，易安沉小舟。 举杯销不尽，挥笔赋难收。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11726282.md#1" target="_blank">五绝：玉宇天台</a><br></h3>大雪悠然下，铺天盖地来。 苍茫无尽处，登顶上天台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:00 PM			</td></tr>
