--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -27,13 +27,13 @@
 
 巨大的无影灯，蓝色的手术袍，闪烁的镜片背后，是一双深不可测的眼睛。一刀下去，正在呼呼跳动的心脏，被遽然切落。血啊，喷射而出的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 11:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751532.md#1" target="_blank">五律：星空</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751532.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/60e13ad4d1dc7ebaeda63f4b5293cedc-150x120.jpg" align ="left"></a>高情何处有，逸韵几人知。 家在天虚极，梦翔星灿时。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 10:48 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/18/n11730757.md#1" target="_blank">【三国英雄】之十：奉迎天子给曹操带来机遇还是风险？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/18/n11730757.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/10-4-150x120.jpg" align ="left"></a>大家经常听到一句话“挟天子以令诸侯”，但是很少有人把奉迎天子给曹操带来了什么说清楚。那麽奉迎天子到底给曹操带来了什么机遇和风险呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/18/n11731198.md#1" target="_blank">扫地老翁写字不解字 寥寥数语预言仕途</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/18/n11731198.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Guangzhou_Wuxian_Guan_2012.11.15_15-36-29-150x120.jpg" align ="left"></a>北宋时代，在广州一座道观里，有个看似平凡的老人徐守信，人也称他徐二翁。他整日带着扫帚，做各种各样的杂活儿。他常为人写字，但从不解字，每回仅用寥寥数语，为人预言祸福。但他的朋友圈遍及宋朝官场，许多官员遇到难解之事，会跑去向他请教、求字。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744469.md#1" target="_blank">天地清明引(150) 东流水－天降神龙3</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/12/1112190344391999_1-150x120.jpg" align ="left"></a>科举会试已过半月，众人心急如焚。听说近日要放榜，林三按捺不住，向东家告假，整日于街上闲晃。是日，日头正盛，国子监门口放榜，顿时为一众学子围得水泄不通，林三挤不进去。听说状元、榜眼、探花三人皆非自己，有些失望，待众人散去之后，方才看清，自排第十五名。通报姓名籍贯，入国子监领取殿试牌信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/14/n11587544.md#1" target="_blank">【命理】凡人为学日益 修炼人为道日损 修道出神通古有传</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/14/n11587544.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/02/85F12409B35B4E3A-150x120.jpg" align ="left"></a>为道日损才是修道之道，损之又损，损尽所有欲望、执著才能有机会圆满。唐朝开元年间，有张、李二公，志同道合，一起在泰山学道。后来两人分道扬镳，多年后两人重逢，对比出两人不同的结局，天差地别。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 7:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/30/n11691862.md#1" target="_blank">【馨香雅句】天地有大美而不言——时令之和</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/30/n11691862.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/04d1c31ea75dc4d41caf0232c6a4653f-150x120.jpg" align ="left"></a>欢迎来到馨香雅句，我是雅兰，上期我们讲到礼记的月令，那么它当中都讲了哪些具体的内容呢？我们可以从五个方面和您来谈一谈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11749380.md#1" target="_blank">真正的侠义之士</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11749380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1603221611392483-150x120.jpg" align ="left"></a>这世上，没有任何歧途，不可回头；没有任何错误，不可以改正。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11748498.md#1" target="_blank">登山健行不难 带孩子上山的5个理由</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11748498.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191227_sally_play_01-1-150x120.jpg" align ="left"></a>台湾有70%是山，在你家附近一定有几条郊山步道，其实登山健行没有那么难，就是找家里附近的步道去走走！再也不怕孩子放电没处去！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:28 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11733109.md#1" target="_blank">这对永不相见的兄弟 在文海如影随行</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11733109.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/111116000307100483-150x120.jpg" align ="left"></a>杜甫诗云：“人生不相见，动如参与商”，人生在世常有别离，不容易相见，就像天上的参、商二星宿，实在难以相遇。说起“参商”，他们的组合还有一段故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753300.md#1" target="_blank">歌词：我与自己有个约定</a><br></h3> 那一世我没能修成，我与自己有个约定。 等婆罗花开的时候，我要重修佛法寻圣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11749650.md#1" target="_blank">唐浩：选战有道</a><br></h3>正邪搏斗争宝岛   红浪败沉一面倒   乱中有序浊恶拂   秋去春来显真道......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751526.md#1" target="_blank">台湾古典诗：题《台湾汉诗三百首》</a><br></h3>珠玉无遗遍海东，匡时鉴古继唐风， 江河不废传三百，典律先贤砥柱功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 10:38 PM			</td></tr>
