--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -10,6 +10,7 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754348.md#1">明智：浅评香港连续剧《再向虎山行》</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754077.md#1">东方觉：杀妻骗保为何在中国大陆如此“疯行”</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11753867.md#1">乾元：中共设立“密码法”的目的是什么</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753239.md#1">【名家专栏】共同核心标准仍在破坏美国教育</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752237.md#1">袁斌：成都“飞车党事件”与痛风酒发明人猝死</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751711.md#1">张林：青少年被迫加入抗美援朝志愿军</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751030.md#1">从原昆明市中级法院杨晓萍面临国际制裁说起</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751027.md#1">程晓容：法制人权黑暗年 2019的中国故事</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753653.md#1">美国故事：国之强必先海军强</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706171.md#1">王友群：解体中共的重大事件接连发生</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754080.md#1">组图：12.29中环集会 回顾反送中历程</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754189.md#1">【翻墙必看】中共就香港问题欺骗全世界</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755004.md#1">觉醒的港人：看清楚了中共的真面目</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754433.md#1">俞晓薇：明慧新年祝福值得中国和世界深思</a><br>
@@ -37,18 +38,17 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753347.md#1">香港著名评论员陶杰：台湾是亚洲奇迹</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】川普对中共的九记重锤</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754482.md#1">湖南“操场埋尸案” 原校长黄炳松获刑15年</a><br>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754242.md#1">【萧茗看世界】台湾大选是对中共的公投</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754416.md#1">遭台湾扣查  向心写信向香港政府求助</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播预告】新唐人电视台2020跨年缤纷夜</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11753937.md#1">美中科技战 2020年聚焦五大关键问题</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754348.md#1">明智：浅评香港连续剧《再向虎山行》</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754376.md#1">业界人士：美中贸易真正的大戏在技术领域</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754403.md#1">天津强拆世界级别墅群 数百业主走投无路</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11749398.md#1">甘肃庆阳市法轮功学员被迫害情况综述（中）</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754408.md#1">犯非法行医罪 南科大副教授贺建奎获刑3年</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754038.md#1">圣诞期间 大陆到香港游客锐减九成</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754339.md#1">重庆涪陵一居民楼着火 6人死亡</a><br>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11753937.md#1">美中科技战 2020年聚焦五大关键问题</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754205.md#1">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753030.md#1">山西国企煤矿集团子公司发生事故 5死1伤</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753833.md#1">两大因素 韩国央行预计大陆明年GDP增长破6%</a><br>
